--- a/index.html
+++ b/index.html
@@ -3,83 +3,90 @@
 
 <head>
     <title>Currículo</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style_simple.css">
 </head>
 
 <body>
     <header>
-        
-    </header>
-
-    <main class="main__estilo__colunas">
-
-        <section class="main__coluna__esquerda">
-            
-            <div" class="imagem__container">
+        <section class="header__section">
+            <div class="header__left">
                 <img class="foto__perfil" src="daybson.jpg" width="150px" height="150px">
             </div>
 
-            <h2 class="titulo2__informacoes">Informações</h2>
-            <ul class="lista__left">
-                <li>Brasileiro, solteiro, 35 anos, Coronel Fabriciano - MG, Brasil.</li>
-                <li>Email: <a class="texto__left"
-                        href="mailto:daybson.paisante@outlook.com?subject=Vaga de emprego">daybson.paisante@outlook.com</a>
-                </li>
-                <li>Telefone: <a class="texto__left" href="https://wa.me/5531987176897">(31)98717-6897</a></li>
-                <li>Perfil: <a class="texto__left" href="https://www.linkedin.com/in/paisante/"
-                        target="_blank">https://www.linkedin.com/in/paisante/</a></li>
-                <li>Repositório: <a class="texto__left" href="https://github.com/daybson/" target="_blank">https://github.com/daybson/</a>
-                </li>
-            </ul>
-
-            <h2 class="titulo2__informacoes">Objetivo</h2>
-            <p class="texto__left">Busco uma posição onde possa contribuir e crescer como Desenvolvedor de APPs WEB usando
-                .NET, criando aplicações robustas e eficientes que impulsionem o sucesso e a evolução tecnológica da
-                organização.
-            </p>
-
-            <h2 class="titulo2__informacoes">Habilidades</h2>
-            <ul class="lista__left">
-                <li>C#</li>
-                <li>.NET</li>
-                <li>API REST</li>
-                <li>SQL / SQL Server</li>
-                <li>HTML, CSS</li>
-                <li>Blazor</li>
-                <li>Entity Framework</li>
-                <li>xUnit</li>
-                <li>Git</li>
-                <li>Flutter</li>
-            </ul>
-
-            <h2 class="titulo2__informacoes">Idiomas</h2>
-            <ul class="lista__left">
-                <li>Português: nativo</li>
-                <li>Inglês: leitura/escrita intermediária; conversação básica.</li>
-            </ul>
-        </section>
-
-        <section class="main__coluna__direita">
             <div class="header__right">
                 <h1 class="titulo1">Daybson Bertassonni Salles Paisante</h1>
                 <h2 class="titulo2">Desenvolvedor .NET</h2>
             </div>
+        </section>
+    </header>
 
-            <br>
+    <main class="main__estilo__colunas">
 
+        <div class="main__coluna__direita">
+            <section class="main__coluna__direita">
+                <h2 class="titulo2__informacoes">Informações</h2>
+                <ul class="lista">
+                    <li>Brasileiro, solteiro, 35 anos, Coronel Fabriciano - MG, Brasil.</li>
+                    <li>Email: <a class="texto"
+                            href="mailto:daybson.paisante@outlook.com?subject=Vaga de emprego">daybson.paisante@outlook.com</a>
+                    </li>
+                    <li>Telefone: <a class="texto" href="https://wa.me/5531987176897">(31)98717-6897</a></li>
+                    <li>Perfil: <a href="https://www.linkedin.com/in/paisante/"
+                            target="_blank">https://www.linkedin.com/in/paisante/</a></li>
+                    <li>Repositório: <a href="https://github.com/daybson/"
+                            target="_blank">https://github.com/daybson/</a>
+                    </li>
+                </ul>
+
+                <h2 class="titulo2__informacoes">Objetivo</h2>
+                <p class="texto">Busco uma posição onde possa contribuir e crescer como Desenvolvedor de APPs WEB usando
+                    .NET, criando aplicações robustas e eficientes que impulsionem o sucesso e a evolução tecnológica da
+                    organização.
+                </p>
+
+                <h2 class="titulo2__informacoes">Habilidades</h2>
+                <ul class="lista">
+                    <li>C#</li>
+                    <li>.NET</li>
+                    <li>API REST</li>
+                    <li>SQL / SQL Server</li>
+                    <li>HTML, CSS</li>
+                    <li>Blazor</li>
+                    <li>Entity Framework</li>
+                    <li>xUnit</li>
+                    <li>Git</li>
+                    <li>Flutter</li>
+                </ul>
+
+                <h2 class="titulo2__informacoes">Idiomas</h2>
+                <ul class="lista">
+                    <li>Português: nativo</li>
+                    <li>Inglês: leitura/escrita intermediária; conversação básica.</li>
+                </ul>
+            </section>
+        </div>
+
+        <section class="main__coluna__esquerda">
             <h2 class="titulo2">Formação Acadêmica</h2>
             <ul class="lista">
-                <li><strong>Especialização: Desenvolvimento Full Stack</strong>:  Inst. Federal do Sudeste de Minas - Manhuaçu, MG
+                <li><strong>Especialização: Desenvolvimento Full Stack</strong> - Inst. Federal do Sudeste de Minas -
+                    Manhuaçu, MG
                     2025-2026</li>
-                <li><strong>Especialização: Redes e Computação Distribuída:</strong> Inst. Federal do Mato Grosso - Cuiabá, MT 2024-2026
+                <li><strong>Especialização: Redes e Computação Distribuída</strong> - Inst. Federal do Mato Grosso -
+                    Cuiabá, MT 2024-2026
                 </li>
-                <li><strong>Especialização: Desenvolvimento WEB:</strong> Inst. Federal do Sul de Minas Gerais - Passos, MG 2021-2022</li>
-                <li><strong>Especialização: Matemática Computacional:</strong> Univ. Federal do Maranhão - Codó, MA 2021-2022</li>
-                <li><strong>Especialização: Programação de Jogos Digitais:</strong> Univ. Tec. Federal do Paraná - Cornélio Procópio, PR
+                <li><strong>Especialização: Desenvolvimento WEB</strong> - Inst. Federal do Sul de Minas Gerais -
+                    Passos, MG 2021-2022</li>
+                <li><strong>Especialização: Matemática Computacional</strong> - Univ. Federal do Maranhão - Codó, MA
+                    2021-2022</li>
+                <li><strong>Especialização: Programação de Jogos Digitais</strong> - Univ. Tec. Federal do Paraná -
+                    Cornélio Procópio, PR
                     2016-2018</li>
-                <li><strong>Bacharelado: Ciência da Computação:</strong> Univ. Presidente Antônio Carlos - Ipatinga, MG 2008-2011</li>
+                <li><strong>Bacharelado: Ciência da Computação</strong> - Univ. Presidente Antônio Carlos - Ipatinga, MG
+                    2008-2011</li>
             </ul>
-
+            <br>
             <h2 class="titulo2">Formação complementar</h2>
             <ul class="lista">
                 <li>Docker do Zero ao Avançado - 10h, julho, 2024</li>
@@ -87,7 +94,7 @@
                 <li>Fundamentos de Arquitetura de Software - 13h, junho, 2024</li>
                 <li>Fundamentos do Blazor - 11h, junho, 2024</li>
             </ul>
-
+            <br>
             <h2 class="titulo2">Experiência profissional</h2>
 
             <h3 class="titulo3">Analista e Desenvolvedor de Sistemas</h3>
@@ -117,7 +124,7 @@
             <p class="texto">Realizei desenvolvimento de formulários usando Delphi e relatórios com Report Builder e SQL
                 Server para
                 sistema de saúde.</p>
-
+            <br>
             <h2 class="titulo2">Projetos independentes</h2>
 
             <h3 class="titulo3">Aplicativo Android</h3>
