--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
             <div class="header__right">
                 <h1 class="titulo1">Daybson Bertassonni Salles Paisante</h1>
-                <h2 class="titulo2">Desenvolvedor .NET</h2>
+                <h2 class="titulo2">Engenheiro de software .NET</h2>
             </div>
         </section>
     </header>
@@ -24,26 +24,32 @@
     <main class="main__estilo__colunas">
 
         <div class="main__coluna__direita">
-            <section class="main__coluna__direita">
+            <section>
+                <h2 class="titulo2__informacoes">Apresentação</h2>
+                <p class="texto">Olá! Sou um desenvolvedor de software que usa principalmente c# e .NET para criar
+                    aplicações robustas e eficientes. Também desenvolvo apps mobile em Flutter e games em Unity 3D!
+                    <br><br>
+                    Vamos conversar?
+                </p>
+
                 <h2 class="titulo2__informacoes">Informações</h2>
                 <ul class="lista">
                     <li>Brasileiro, solteiro, 35 anos, Coronel Fabriciano - MG, Brasil.</li>
-                    <li>Email: <a class="texto"
+                    <li>Email: <a class="link"
                             href="mailto:daybson.paisante@outlook.com?subject=Vaga de emprego">daybson.paisante@outlook.com</a>
                     </li>
-                    <li>Telefone: <a class="texto" href="https://wa.me/5531987176897">(31)98717-6897</a></li>
-                    <li>Perfil: <a href="https://www.linkedin.com/in/paisante/"
+                    <li>Telefone: <a class="link" href="https://wa.me/5531987176897">(31)98717-6897</a></li>
+                    <li>Perfil: <a class="link" href="https://www.linkedin.com/in/paisante/"
                             target="_blank">https://www.linkedin.com/in/paisante/</a></li>
-                    <li>Repositório: <a href="https://github.com/daybson/"
+                    <li>Canal: <a class="link"
+                            href="http://www.youtube.com/c/GamesCode">http://www.youtube.com/c/GamesCode</a></li>
+                    <li>Repositório: <a class="link" href="https://github.com/daybson/"
                             target="_blank">https://github.com/daybson/</a>
                     </li>
+
                 </ul>
 
-                <h2 class="titulo2__informacoes">Objetivo</h2>
-                <p class="texto">Busco uma posição onde possa contribuir e crescer como Desenvolvedor de APPs WEB usando
-                    .NET, criando aplicações robustas e eficientes que impulsionem o sucesso e a evolução tecnológica da
-                    organização.
-                </p>
+
 
                 <h2 class="titulo2__informacoes">Habilidades</h2>
                 <ul class="lista">
@@ -69,23 +75,48 @@
 
         <section class="main__coluna__esquerda">
             <h2 class="titulo2">Formação Acadêmica</h2>
-            <ul class="lista">
-                <li><strong>Especialização: Desenvolvimento Full Stack</strong> - Inst. Federal do Sudeste de Minas -
-                    Manhuaçu, MG
-                    2025-2026</li>
-                <li><strong>Especialização: Redes e Computação Distribuída</strong> - Inst. Federal do Mato Grosso -
-                    Cuiabá, MT 2024-2026
-                </li>
-                <li><strong>Especialização: Desenvolvimento WEB</strong> - Inst. Federal do Sul de Minas Gerais -
-                    Passos, MG 2021-2022</li>
-                <li><strong>Especialização: Matemática Computacional</strong> - Univ. Federal do Maranhão - Codó, MA
-                    2021-2022</li>
-                <li><strong>Especialização: Programação de Jogos Digitais</strong> - Univ. Tec. Federal do Paraná -
-                    Cornélio Procópio, PR
-                    2016-2018</li>
-                <li><strong>Bacharelado: Ciência da Computação</strong> - Univ. Presidente Antônio Carlos - Ipatinga, MG
-                    2008-2011</li>
-            </ul>
+
+            <table class="tabela__cursos">
+                <tr>
+                    <th class="tabela__cursos__curso">Curso</th>
+                    <th class="tabela__cursos__instituicao">Instituição</th>
+                    <th class="tabela__cursos__periodo">Período</th>
+                </tr>
+                <tr>
+                    <td><strong>Especialização: Desenvolvimento Full Stack</strong> </td>
+                    <td> Inst. Federal do Sudeste de Minas - Manhuaçu, MG</td>
+                    <td>2025-2026</td>
+                </tr>
+                <tr>
+                    <td><strong>Especialização: Redes e Computação Distribuída</strong> </td>
+                    <td> Inst. Federal do Mato Grosso - Cuidabá, MT</td>
+                    <td>2025-2026</td>
+                </tr>
+                <tr>
+                    <td><strong>Especialização: Desenvolvimento WEB</strong></td>
+                    <td>
+                        Inst. Federal do Sul de Minas Gerais - Passos, MG
+                    </td>
+                    <td>2021-2022</td>
+                </tr>
+                <tr>
+                    <td><strong>Especialização: Matemática Computacional</strong></td>
+                    <td>Univ. Federal do Maranhão - Codó, MA</td>
+                    <td>2021-2022</td>
+                </tr>
+                <tr>
+                    <td><strong>Especialização: Programação de Jogos Digitais</strong></td>
+                    <td>Univ. Tec. Federal do Paraná -
+                        Cornélio Procópio, PR</td>
+                    <td>2016-2018</td>
+                </tr>
+                <tr>
+                    <td><strong>Bacharelado: Ciência da Computação</strong></td>
+                    <td>Univ. Presidente Antônio Carlos - Ipatinga, MG</td>
+                    <td>2008-2011</td>
+                </tr>
+            </table>
+
             <br>
             <h2 class="titulo2">Formação complementar</h2>
             <ul class="lista">
