--- a/index.html
+++ b/index.html
@@ -26,10 +26,8 @@
         <div class="main__coluna__direita">
             <section>
                 <h2 class="titulo2__informacoes">Apresentação</h2>
-                <p class="texto">Olá! Sou um desenvolvedor de software que usa principalmente c# e .NET para criar
-                    aplicações robustas e eficientes. Também desenvolvo apps mobile em Flutter e games em Unity 3D!
-                    <br><br>
-                    Vamos conversar?
+                <p class="texto">Sou um desenvolvedor de software que usa principalmente C# e .NET para criar
+                    aplicações robustas e eficientes.                    
                 </p>
 
                 <h2 class="titulo2__informacoes">Informações</h2>
@@ -41,26 +39,22 @@
                     <li>Telefone: <a class="link" href="https://wa.me/5531987176897">(31)98717-6897</a></li>
                     <li>Perfil: <a class="link" href="https://www.linkedin.com/in/paisante/"
                             target="_blank">https://www.linkedin.com/in/paisante/</a></li>
-                    <li>Canal: <a class="link"
-                            href="http://www.youtube.com/c/GamesCode">http://www.youtube.com/c/GamesCode</a></li>
+                    <!--<li>Canal: <a class="link"
+                            href="http://www.youtube.com/c/GamesCode">http://www.youtube.com/c/GamesCode</a></li> -->
                     <li>Repositório: <a class="link" href="https://github.com/daybson/"
                             target="_blank">https://github.com/daybson/</a>
                     </li>
 
-                </ul>
-
-
+                </ul> 
 
                 <h2 class="titulo2__informacoes">Habilidades</h2>
                 <ul class="lista">
-                    <li>C#</li>
-                    <li>.NET</li>
+                    <li>Python</li>
+                    <li>C# / .NET</li>
                     <li>API REST</li>
                     <li>SQL / SQL Server</li>
-                    <li>HTML, CSS</li>
-                    <li>Blazor</li>
-                    <li>Entity Framework</li>
-                    <li>xUnit</li>
+                    <li>HTML, CSS, JavaScript</li>
+                    <li>Testes</li>
                     <li>Git</li>
                     <li>Flutter</li>
                 </ul>
@@ -117,6 +111,7 @@
                 </tr>
             </table>
 
+            <!--
             <br>
             <h2 class="titulo2">Formação complementar</h2>
             <ul class="lista">
@@ -126,6 +121,7 @@
                 <li>Fundamentos do Blazor - 11h, junho, 2024</li>
             </ul>
             <br>
+            -->
             <h2 class="titulo2">Experiência profissional</h2>
 
             <h3 class="titulo3">Analista e Desenvolvedor de Sistemas</h3>
