--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <section class="header__section">
             <div class="header__left">
-                <img class="foto__perfil" src="daybson.jpg" width="150px" height="150px">
+                <img class="foto__perfil" src="daybson2.jpg" width="150px" height="150px">
             </div>
 
             <div class="header__right">
@@ -27,37 +27,40 @@
             <section>
                 <h2 class="titulo2__informacoes">Apresentação</h2>
                 <p class="texto">Sou um desenvolvedor de software que usa principalmente C# e .NET para criar
-                    aplicações robustas e eficientes.                    
+                    aplicações robustas e eficientes.
                 </p>
 
                 <h2 class="titulo2__informacoes">Informações</h2>
-                <ul class="lista">
-                    <li>Brasileiro, solteiro, 35 anos, Coronel Fabriciano - MG, Brasil.</li>
-                    <li>Email: <a class="link"
-                            href="mailto:daybson.paisante@outlook.com?subject=Vaga de emprego">daybson.paisante@outlook.com</a>
-                    </li>
-                    <li>Telefone: <a class="link" href="https://wa.me/5531987176897">(31)98717-6897</a></li>
-                    <li>Perfil: <a class="link" href="https://www.linkedin.com/in/paisante/"
-                            target="_blank">https://www.linkedin.com/in/paisante/</a></li>
-                    <!--<li>Canal: <a class="link"
+                <div class="experience-item">
+                    <ul class="lista">
+                        <li>Brasileiro, solteiro, 35 anos, Coronel Fabriciano - MG, Brasil.</li>
+                        <li>Email: <a class="link"
+                                href="mailto:daybson.paisante@outlook.com?subject=Vaga de emprego">daybson.paisante@outlook.com</a>
+                        </li>
+                        <li>Telefone: <a class="link" href="https://wa.me/5531987176897">(31)98717-6897</a></li>
+                        <li>Perfil: <a class="link" href="https://www.linkedin.com/in/paisante/"
+                                target="_blank">https://www.linkedin.com/in/paisante/</a></li>
+                        <!--<li>Canal: <a class="link"
                             href="http://www.youtube.com/c/GamesCode">http://www.youtube.com/c/GamesCode</a></li> -->
-                    <li>Repositório: <a class="link" href="https://github.com/daybson/"
-                            target="_blank">https://github.com/daybson/</a>
-                    </li>
-
-                </ul> 
+                        <li>Repositório: <a class="link" href="https://github.com/daybson/"
+                                target="_blank">https://github.com/daybson/</a>
+                        </li>
+                    </ul>
+                </div>
 
                 <h2 class="titulo2__informacoes">Habilidades</h2>
-                <ul class="lista">
-                    <li>Python</li>
-                    <li>C# / .NET</li>
-                    <li>API REST</li>
-                    <li>SQL / SQL Server</li>
-                    <li>HTML, CSS, JavaScript</li>
-                    <li>Testes</li>
-                    <li>Git</li>
-                    <li>Flutter</li>
-                </ul>
+                <div class="experience-item">
+                    <ul class="lista">
+                        <li>C# / .NET</li>
+                        <li>Python</li>
+                        <li>API REST</li>
+                        <li>SQL / SQL Server</li>
+                        <li>HTML, CSS, JavaScript</li>
+                        <li>Testes</li>
+                        <li>Git</li>
+                        <li>Flutter</li>
+                    </ul>
+                </div>
 
                 <h2 class="titulo2__informacoes">Idiomas</h2>
                 <ul class="lista">
@@ -124,44 +127,61 @@
             -->
             <h2 class="titulo2">Experiência profissional</h2>
 
-            <h3 class="titulo3">Analista e Desenvolvedor de Sistemas</h3>
-            <h4 class="titulo__suave">Prefeitura de Ipatinga, MG (outubro, 2014 - atual)</h4>
-            <p class="texto">Desenvolvi soluções para a saúde, integrando sistemas municipais com APIs REST do Governo
-                Federal usando .NET e C#.
-                Criei uma API REST e uma aplicação web em ASP.NET MVC para integrar resultados de exames com
-                laboratórios conveniados,
-                otimizando o atendimento médico e o faturamento.
-            </p>
+            <div class="experience-item">
+                <h3 class="titulo3">Analista e Desenvolvedor de Sistemas</h3>
+                <h4 class="titulo__suave">Prefeitura de Ipatinga, MG (outubro, 2014 - atual)</h4>
+                <p class="texto">Desenvolvi soluções para a saúde, integrando sistemas municipais com APIs REST do
+                    Governo
+                    Federal usando .NET e C#.
+                    Criei uma API REST e uma aplicação web em ASP.NET MVC para integrar resultados de exames com
+                    laboratórios conveniados,
+                    otimizando o atendimento médico e o faturamento.
+                </p>
+            </div>
 
-            <h3 class="titulo3">Professor universitário</h3>
-            <h4 class="titulo__suave">Faculdade Única - Ipatinga, MG (agosto, 2018 - dezembro, 2021)</h4>
-            <p class="texto">Lecionei a disciplina de Computação Gráfica para graduação em Ciência da Computação,
-                abordando programação de jogos com game engine Unity, Processamento de Imagens e Álgebra Linear.
-            </p>
+            <div class="experience-item">
+                <h3 class="titulo3">Professor universitário</h3>
+                <h4 class="titulo__suave">Faculdade Única - Ipatinga, MG (agosto, 2018 - dezembro, 2021)</h4>
+                <p class="texto">Lecionei a disciplina de Computação Gráfica para graduação em Ciência da Computação,
+                    abordando programação de jogos com game engine Unity, Processamento de Imagens e Álgebra Linear.
+                </p>
+            </div>
 
-            <h3 class="titulo3">Desenvolvedor Unity 3D</h3>
-            <h4 class="titulo__suave">Lynx Proccess Belo Horizonte, MG (fevereiro, 2014 - abril, 2017)</h4>
-            <p class="texto">Fui responsável pela manutenção e desenvolvimento de funcionalidades para um sistema 3D de
-                monitoramento de pátio de minério em tempo real com Unity e C#. Ajudei a desenvolver o sistema
-                anti-colisão de máquinas de pátio, proporcionando segurança
-                e redução de riscos de colisões entre máquinas.</p>
+            <div class="experience-item">
 
-            <h3 class="titulo3">Programador</h3>
-            <h4 class="titulo__suave">Prefeitura de Ipatinga, MG (janeiro, 2012 - janeiro, 2014)</h4>
-            <p class="texto">Realizei desenvolvimento de formulários usando Delphi e relatórios com Report Builder e SQL
-                Server para
-                sistema de saúde.</p>
-            <br>
+                <h3 class="titulo3">Desenvolvedor Unity 3D</h3>
+                <h4 class="titulo__suave">Lynx Proccess Belo Horizonte, MG (fevereiro, 2014 - abril, 2017)</h4>
+                <p class="texto">Fui responsável pela manutenção e desenvolvimento de funcionalidades para um sistema 3D
+                    de
+                    monitoramento de pátio de minério em tempo real com Unity e C#. Ajudei a desenvolver o sistema
+                    anti-colisão de máquinas de pátio, proporcionando segurança
+                    e redução de riscos de colisões entre máquinas.</p>
+            </div>
+
+            <div class="experience-item">
+                <h3 class="titulo3">Programador</h3>
+                <h4 class="titulo__suave">Prefeitura de Ipatinga, MG (janeiro, 2012 - janeiro, 2014)</h4>
+                <p class="texto">Realizei desenvolvimento de formulários usando Delphi e relatórios com Report Builder e
+                    SQL
+                    Server para
+                    sistema de saúde.</p>
+                <br>
+            </div>
+
             <h2 class="titulo2">Projetos independentes</h2>
 
-            <h3 class="titulo3">Aplicativo Android</h3>
-            <p class="texto">
-                Desenvolvi um aplicativo para Android usando Flutter, para agilizar a criação de personagens de jogos de
-                RPG de mesa.
-                <br>Publicado na Googple Play, 5 mil downloads, nota 4.4 e mais de 300 avaliações.
-                <br> <a href="https://play.google.com/store/apps/details?id=com.gamescode.rpg3dit" target="_blank">Link
-                    da Google Play</a>
-            </p>
+            <div class="experience-item">
+                <h3 class="titulo3">Aplicativo Android</h3>
+                <p class="texto">
+                    Desenvolvi um aplicativo para Android usando Flutter, para agilizar a criação de personagens de
+                    jogos de
+                    RPG de mesa.
+                    <br>Publicado na Googple Play, 5 mil downloads, nota 4.4 e mais de 300 avaliações.
+                    <br> <a href="https://play.google.com/store/apps/details?id=com.gamescode.rpg3dit"
+                        target="_blank">Link
+                        da Google Play</a>
+                </p>
+            </div>
         </section>
 
 
