--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
             <div class="header__right">
                 <h1 class="titulo1">Daybson Bertassonni Salles Paisante</h1>
-                <h2 class="titulo2">Engenheiro de software .NET</h2>
+                <h2 class="titulo2">Desenvolvedor de Software</h2>
             </div>
         </section>
     </header>
@@ -26,13 +26,15 @@
         <div class="main__coluna__direita">
             <section>
                 <h2 class="titulo2__informacoes">Apresentação</h2>
-                <p class="texto">Sou um desenvolvedor de software que usa principalmente C# e .NET para criar
-                    aplicações robustas e eficientes.
+                <p class="texto">
+                    Sou um profissional com sólida experiência em C\# e .NET, dedico-me a construir softwares que se destacam pela eficiência e escalabilidade. 
+                    <br>
+                    Meu objetivo é entregar tecnologia que simplifica processos e impulsiona resultados.
                 </p>
 
                 <h2 class="titulo2__informacoes">Informações</h2>
                 <div class="experience-item">
-                    <ul class="lista">
+                    <ul class="lista__colunas">
                         <li>Brasileiro, solteiro, 35 anos, Coronel Fabriciano - MG, Brasil.</li>
                         <li>Email: <a class="link"
                                 href="mailto:daybson.paisante@outlook.com?subject=Vaga de emprego">daybson.paisante@outlook.com</a>
@@ -50,7 +52,7 @@
 
                 <h2 class="titulo2__informacoes">Habilidades</h2>
                 <div class="experience-item">
-                    <ul class="lista">
+                    <ul class="lista__colunas">
                         <li>C# / .NET</li>
                         <li>Python</li>
                         <li>API REST</li>
@@ -72,8 +74,30 @@
 
         <section class="main__coluna__esquerda">
             <h2 class="titulo2">Formação Acadêmica</h2>
+            <ul class="lista">
+                <li class="lista__item"><strong>Esp. Desenvolvimento Full Stack</strong>
+                    Inst. Federal do Sudeste de Minas - 2025-2026
+                </li>
+                <li class="lista__item"><strong>Esp. Redes e Computação Distribuída</strong>
+                    Inst. Federal do Mato Grosso - 2025-2026
+                </li>
+                <li class="lista__item"><strong>Esp. Desenvolvimento WEB</strong>
+                    Inst. Federal do Sul de Minas Gerais - 2021-2022
+                </li>
+                <li class="lista__item"><strong>Esp. Matemática Computacional</strong>
+                    Univ. Federal do Maranhão - 2021-2022
+                </li>
+                <li class="lista__item"><strong>Esp. Programação de Jogos Digitais</strong>
+                    Univ. Tec. Federal do Paraná - 2016-2018
+                </li>
+                <li class="lista__item"><strong>Bacharelado: Ciência da Computação</strong>
+                    Univ. Presidente Antônio Carlos - Ipatinga, MG
+                    2008-2011
+                </li>
+            </ul>
 
-            <table class="tabela__cursos">
+
+            <!-- <table class="tabela__cursos">
                 <tr>
                     <th class="tabela__cursos__curso">Curso</th>
                     <th class="tabela__cursos__instituicao">Instituição</th>
@@ -112,7 +136,7 @@
                     <td>Univ. Presidente Antônio Carlos - Ipatinga, MG</td>
                     <td>2008-2011</td>
                 </tr>
-            </table>
+            </table> -->
 
             <!--
             <br>
@@ -130,20 +154,29 @@
             <div class="experience-item">
                 <h3 class="titulo3">Analista e Desenvolvedor de Sistemas</h3>
                 <h4 class="titulo__suave">Prefeitura de Ipatinga, MG (outubro, 2014 - atual)</h4>
-                <p class="texto">Desenvolvi soluções para a saúde, integrando sistemas municipais com APIs REST do
-                    Governo
-                    Federal usando .NET e C#.
-                    Criei uma API REST e uma aplicação web em ASP.NET MVC para integrar resultados de exames com
-                    laboratórios conveniados,
-                    otimizando o atendimento médico e o faturamento.
-                </p>
+                <p class="texto">
+                <ul class="lista">
+                    <li>Desenvolvi integrações entre sistemas municipais com <strong>APIs REST/SOAP</strong>
+                        do Governo Federal usando <strong>.NET e C#</strong> através de aplicações WEB e Desktop com WPF.
+                    </li>
+                    <li>Criei uma API REST em .NET e uma aplicação web em <strong>ASP.NET MVC</strong> para integrar
+                        resultados de exames com laboratórios conveniados, otimizando o atendimento médico e o
+                        faturamento.
+                    </li>
+                </ul>
             </div>
 
             <div class="experience-item">
                 <h3 class="titulo3">Professor universitário</h3>
                 <h4 class="titulo__suave">Faculdade Única - Ipatinga, MG (agosto, 2018 - dezembro, 2021)</h4>
-                <p class="texto">Lecionei a disciplina de Computação Gráfica para graduação em Ciência da Computação,
-                    abordando programação de jogos com game engine Unity, Processamento de Imagens e Álgebra Linear.
+                <p class="texto">
+                <ul class="lista">
+                    <li>
+                        Lecionei a disciplina de Computação Gráfica para graduação em Ciência da Computação, abordando
+                        programação de jogos com game engine <strong>Unity, Processamento de Imagens e Álgebra
+                            Linear</strong>.
+                    </li>
+                </ul>
                 </p>
             </div>
 
@@ -151,20 +184,27 @@
 
                 <h3 class="titulo3">Desenvolvedor Unity 3D</h3>
                 <h4 class="titulo__suave">Lynx Proccess Belo Horizonte, MG (fevereiro, 2014 - abril, 2017)</h4>
-                <p class="texto">Fui responsável pela manutenção e desenvolvimento de funcionalidades para um sistema 3D
-                    de
-                    monitoramento de pátio de minério em tempo real com Unity e C#. Ajudei a desenvolver o sistema
-                    anti-colisão de máquinas de pátio, proporcionando segurança
-                    e redução de riscos de colisões entre máquinas.</p>
+                <p class="texto">
+                <ul class="lista">
+                    <li>Fui responsável pela manutenção e desenvolvimento de funcionalidades para um sistema 3D
+                        de monitoramento de pátio de minério em tempo real com <strong>Unity e C#</strong>.</li>
+                    <li>Ajudei a desenvolver o sistema anti-colisão de máquinas de pátio, proporcionando segurança
+                        e redução de riscos de colisões entre máquinas.</p>
+                    </li>
+                </ul>
             </div>
 
             <div class="experience-item">
                 <h3 class="titulo3">Programador</h3>
                 <h4 class="titulo__suave">Prefeitura de Ipatinga, MG (janeiro, 2012 - janeiro, 2014)</h4>
-                <p class="texto">Realizei desenvolvimento de formulários usando Delphi e relatórios com Report Builder e
-                    SQL
-                    Server para
-                    sistema de saúde.</p>
+                <p class="texto">
+                <ul class="lista">
+                    <li>Realizei desenvolvimento de formulários usando <strong>Delphi</strong> e relatórios com Report
+                        Builder e
+                        <strong>SQL Server</strong> para sistema de saúde.</p>
+                    </li>
+                </ul>
+
                 <br>
             </div>
 
@@ -172,15 +212,15 @@
 
             <div class="experience-item">
                 <h3 class="titulo3">Aplicativo Android</h3>
-                <p class="texto">
-                    Desenvolvi um aplicativo para Android usando Flutter, para agilizar a criação de personagens de
-                    jogos de
-                    RPG de mesa.
-                    <br>Publicado na Googple Play, 5 mil downloads, nota 4.4 e mais de 300 avaliações.
-                    <br> <a href="https://play.google.com/store/apps/details?id=com.gamescode.rpg3dit"
-                        target="_blank">Link
-                        da Google Play</a>
-                </p>
+                <ul class="lista">
+                    <li>Desenvolvi um aplicativo para Android usando Flutter, para agilizar a criação de personagens de
+                        jogos de RPG de mesa.
+                    </li>
+                    <li>Publicado na Googple Play, 5 mil downloads, nota 4.4 e mais de 300 avaliações.
+                        <a href="https://play.google.com/store/apps/details?id=com.gamescode.rpg3dit"
+                            target="_blank">Link da Google Play</a>
+                    </li>
+                </ul>
             </div>
         </section>
 
