--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
             <section>
                 <h2 class="titulo2__informacoes">Apresentação</h2>
                 <p class="texto">
-                    Sou um profissional com sólida experiência em C\# e .NET, dedico-me a construir softwares que se destacam pela eficiência e escalabilidade. 
-                    <br>
-                    Meu objetivo é entregar tecnologia que simplifica processos e impulsiona resultados.
+                    Sou um profissional com mais de 10 anos de experiência, com sólida experiência em C\# e .NET. Dedico-me a construir softwares que se destacam pela eficiência e escalabilidade.
+                    <br>Meu objetivo é entregar tecnologia que simplifica processos e impulsiona resultados.
                 </p>
 
                 <h2 class="titulo2__informacoes">Informações</h2>
