--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             <section>
                 <h2 class="titulo2__informacoes">Apresentação</h2>
                 <p class="texto">
-                    Sou um profissional com mais de 10 anos de experiência, com sólida experiência em C\# e .NET. Dedico-me a construir softwares que se destacam pela eficiência e escalabilidade.
+                    Sou um profissional com mais de 10 anos de experiência, com sólida experiência em C# e .NET. 
+                    <!-- <br>Dedico-me a construir softwares que se destacam pela eficiência e escalabilidade. -->
                     <br>Meu objetivo é entregar tecnologia que simplifica processos e impulsiona resultados.
                 </p>
 
@@ -77,18 +78,18 @@
                 <li class="lista__item"><strong>Esp. Desenvolvimento Full Stack</strong>
                     Inst. Federal do Sudeste de Minas - 2025-2026
                 </li>
-                <li class="lista__item"><strong>Esp. Redes e Computação Distribuída</strong>
+                <!-- <li class="lista__item"><strong>Esp. Redes e Computação Distribuída</strong>
                     Inst. Federal do Mato Grosso - 2025-2026
-                </li>
-                <li class="lista__item"><strong>Esp. Desenvolvimento WEB</strong>
+                </li> -->
+                <!-- <li class="lista__item"><strong>Esp. Desenvolvimento WEB</strong>
                     Inst. Federal do Sul de Minas Gerais - 2021-2022
-                </li>
+                </li> -->
                 <li class="lista__item"><strong>Esp. Matemática Computacional</strong>
                     Univ. Federal do Maranhão - 2021-2022
                 </li>
-                <li class="lista__item"><strong>Esp. Programação de Jogos Digitais</strong>
+                <!-- <li class="lista__item"><strong>Esp. Programação de Jogos Digitais</strong>
                     Univ. Tec. Federal do Paraná - 2016-2018
-                </li>
+                </li> -->
                 <li class="lista__item"><strong>Bacharelado: Ciência da Computação</strong>
                     Univ. Presidente Antônio Carlos - Ipatinga, MG
                     2008-2011
@@ -158,6 +159,7 @@
                     <li>Desenvolvi integrações entre sistemas municipais com <strong>APIs REST/SOAP</strong>
                         do Governo Federal usando <strong>.NET e C#</strong> através de aplicações WEB e Desktop com WPF.
                     </li>
+                    <li>Otimização de integração com API REST usando multi-thread, reduzindo 70% do tempo gasto para enviar dados.</li>
                     <li>Criei uma API REST em .NET e uma aplicação web em <strong>ASP.NET MVC</strong> para integrar
                         resultados de exames com laboratórios conveniados, otimizando o atendimento médico e o
                         faturamento.
