--- a/index.html
+++ b/index.html
@@ -26,11 +26,14 @@
         <div class="main__coluna__direita">
             <section>
                 <h2 class="titulo2__informacoes">Apresentação</h2>
-                <p class="texto">
-                    Sou um profissional com mais de 10 anos de experiência, com sólida experiência em C# e .NET. 
-                    <!-- <br>Dedico-me a construir softwares que se destacam pela eficiência e escalabilidade. -->
-                    <br>Meu objetivo é entregar tecnologia que simplifica processos e impulsiona resultados.
-                </p>
+
+                <div class="experience-item">
+                    <p class="texto">
+                        Sou um profissional com mais de 10 anos de experiência em desenvolvimento de software, com sólida experiência em C# e .NET.
+                        <br>Dedico-me a construir softwares que se destaquem pela eficiência e escalabilidade.
+                        <br><br>Meu objetivo é entregar tecnologia que simplifica processos e impulsiona resultados.
+                    </p>
+                </div>
 
                 <h2 class="titulo2__informacoes">Informações</h2>
                 <div class="experience-item">
@@ -56,11 +59,13 @@
                         <li>C# / .NET</li>
                         <li>Python</li>
                         <li>API REST</li>
+                        <li>ASP .NET MVC</li>
                         <li>SQL / SQL Server</li>
-                        <li>HTML, CSS, JavaScript</li>
+                        <li>HTML, CSS, JavaScript</li>                        
+                        <li>Entity Framwork</li>
                         <li>Testes</li>
                         <li>Git</li>
-                        <li>Flutter</li>
+                        <li>Flutter / Android</li>
                     </ul>
                 </div>
 
@@ -157,9 +162,11 @@
                 <p class="texto">
                 <ul class="lista">
                     <li>Desenvolvi integrações entre sistemas municipais com <strong>APIs REST/SOAP</strong>
-                        do Governo Federal usando <strong>.NET e C#</strong> através de aplicações WEB e Desktop com WPF.
+                        do Governo Federal usando <strong>.NET e C#</strong> através de aplicações WEB e Desktop com
+                        WPF.
                     </li>
-                    <li>Otimização de integração com API REST usando multi-thread, reduzindo 70% do tempo gasto para enviar dados.</li>
+                    <li>Otimizei uma integração usando <strong>multi-thread</strong>, reduzindo 70% do tempo gasto para
+                        enviar dados para uma API REST do Governo Federal.</li>
                     <li>Criei uma API REST em .NET e uma aplicação web em <strong>ASP.NET MVC</strong> para integrar
                         resultados de exames com laboratórios conveniados, otimizando o atendimento médico e o
                         faturamento.
@@ -174,8 +181,7 @@
                 <ul class="lista">
                     <li>
                         Lecionei a disciplina de Computação Gráfica para graduação em Ciência da Computação, abordando
-                        programação de jogos com game engine <strong>Unity, Processamento de Imagens e Álgebra
-                            Linear</strong>.
+                        programação de jogos com game engine <strong>Unity, Processamento de Imagens e Álgebra Linear</strong>.
                     </li>
                 </ul>
                 </p>
@@ -187,9 +193,9 @@
                 <h4 class="titulo__suave">Lynx Proccess Belo Horizonte, MG (fevereiro, 2014 - abril, 2017)</h4>
                 <p class="texto">
                 <ul class="lista">
-                    <li>Fui responsável pela manutenção e desenvolvimento de funcionalidades para um sistema 3D
+                    <li>Fui responsável pela manutenção e desenvolvimento de funcionalidades para um <strong>sistema 3D</strong>
                         de monitoramento de pátio de minério em tempo real com <strong>Unity e C#</strong>.</li>
-                    <li>Ajudei a desenvolver o sistema anti-colisão de máquinas de pátio, proporcionando segurança
+                    <li>Participei do desenvolvimento de um sistema anti-colisão de máquinas de pátio, proporcionando segurança
                         e redução de riscos de colisões entre máquinas.</p>
                     </li>
                 </ul>
@@ -201,12 +207,9 @@
                 <p class="texto">
                 <ul class="lista">
                     <li>Realizei desenvolvimento de formulários usando <strong>Delphi</strong> e relatórios com Report
-                        Builder e
-                        <strong>SQL Server</strong> para sistema de saúde.</p>
+                        Builder e <strong>SQL Server</strong> para sistema de saúde municipal.</p>
                     </li>
                 </ul>
-
-                <br>
             </div>
 
             <h2 class="titulo2">Projetos independentes</h2>
@@ -214,7 +217,7 @@
             <div class="experience-item">
                 <h3 class="titulo3">Aplicativo Android</h3>
                 <ul class="lista">
-                    <li>Desenvolvi um aplicativo para Android usando Flutter, para agilizar a criação de personagens de
+                    <li>Desenvolvi um aplicativo para <strong>Android</strong> usando <strong>Flutter</strong>, para agilizar a criação de personagens de
                         jogos de RPG de mesa.
                     </li>
                     <li>Publicado na Googple Play, 5 mil downloads, nota 4.4 e mais de 300 avaliações.
